# ReportGenerator

./: DockerFile  README.md  app.py  fastAPI-app.py  flask-app.py  laryngeal.md  main.py  model.ipynb  pyproject.toml  requirements.txt  sample.ipynb  test_app.py
.github/workflows/: cicd.yml
src/reportgenerator/: main.py
src/reportgenerator/graphs/: graph_builder.py
src/reportgenerator/llms/: GroqLLM.py
src/reportgenerator/nodes/: final_report.py  llm_call_parallel.py  orchestrator.py  proposed_method.py  references.py  route_node.py
src/reportgenerator/states/: states.py
src/reportgenerator/utils/: utils.py
src/reportgeneratorapp/: main.py
src/reportgeneratorapp/graphs/: graph_builder.py
src/reportgeneratorapp/llms/: GroqLLM.py
src/reportgeneratorapp/nodes/: abstract.py  assign_workers.py  conclusion.py  final_report.py  intro.py  llm_call_parallel.py  methodology.py  orchestrator.py  proposed_method.py  references.py  results.py  route_node.py  synthesizer.py
src/reportgeneratorapp/tools/: tools.py
static/: style.css
templates/: auto_generate_page.html  base.html  index.html  input_page.html  result.html
