[project]
name = "reportgenerator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.3.0",
    "bs4>=0.0.2",
    "fastapi>=0.120.4",
    "langchain>=1.0.3",
    "langchain-core>=1.0.2",
    "langchain-groq>=1.0.0",
    "langchain-tavily>=0.2.12",
    "langgraph>=1.0.2",
    "langgraph-cli[inmem]>=0.4.5",
    "tavily>=1.1.0",
    "uvicorn>=0.38.0",
    "watchdog>=6.0.0",
    "wikipedia>=1.4.0",
]
