[project]
name = "reportgenerator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.3.0",
    "bs4>=0.0.2",
    "chromadb>=1.3.0",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.120.4",
    "flask>=3.1.2",
    "jinja2>=3.1.6",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.2",
    "langchain-groq>=1.0.0",
    "langchain-ollama>=1.0.0",
    "langchain-tavily>=0.2.12",
    "langgraph>=1.0.2",
    "langgraph-cli[inmem]>=0.4.5",
    "latex2mathml>=3.78.1",
    "markdown>=3.10",
    "markdown2>=2.5.4",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pypandoc>=1.15",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.4",
    "tavily>=1.1.0",
    "uvicorn>=0.38.0",
    "watchdog>=6.0.0",
    "wikipedia>=1.4.0",
]
